<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CadastroActivity"
    android:background="@drawable/colors_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/branco"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="506dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="61dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/nome"
                android:textColorHint="@color/branco">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nome"
                    android:textColor="@color/branco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="99dp"
                    android:textColorHighlight="@color/branco" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/sobrenome"
                android:textColorHint="@color/branco">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textColor="@color/branco"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textColorHighlight="@color/branco" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_cadastro"
                android:textColorHint="@color/branco">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/branco"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColorHighlight="@color/branco" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/senha_cadastro"
                android:textColorHint="@color/branco">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/branco"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColorHighlight="@color/branco" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/datanasc"
                android:textColorHint="@color/branco">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/datanasc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/branco"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:inputType="date"
                    android:textColorHighlight="@color/branco" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/celular"
                android:textColorHint="@color/branco">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/celular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/branco"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="25dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:id="@+id/confirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmar"
                android:background="@drawable/botao_customizado"
                android:textColor="@color/cinza"/>


        </LinearLayout>

    </RelativeLayout>
</ScrollView>